<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_submenu_bg"
    android:padding="8dp"
    tools:context=".StudentEditActivity">

    <TextView
        android:id="@+id/tvIdStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_id"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/etStudentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/box_outline"
        android:drawableStart="@drawable/ic_action_name"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:hint="@string/student_name"
        android:minHeight="58dp"
        android:padding="10dp"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/etAddressStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/box_outline"
        android:drawableStart="@drawable/ic_action_home"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:hint="@string/student_address"
        android:minHeight="58dp"
        android:padding="10dp"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/etEmailStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/box_outline"
        android:drawableStart="@drawable/ic_action_email_two"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:hint="@string/student_email"
        android:minHeight="58dp"
        android:padding="10dp"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/etAgeStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/box_outline"
        android:drawableStart="@drawable/ic_action_age"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:hint="@string/student_age"
        android:minHeight="58dp"
        android:padding="10dp"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/etPhoneStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/box_outline"
        android:drawableStart="@drawable/ic_action_phone"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:hint="@string/student_phone"
        android:minHeight="58dp"
        android:padding="10dp"
        android:textSize="22sp" />

    <Spinner
        android:id="@+id/spChooseCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/list_of_courses"
        android:minHeight="58sp"
        android:prompt="@string/select_course"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/save_changes" />

    <Button
        android:id="@+id/btn_go_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/go_back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_students"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>