<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_submenu_bg"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/course"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/edit_courseYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/box_outline"
        android:drawableStart="@drawable/ic_action_year"
        android:drawablePadding="2dp"
        android:gravity="center"
        android:hint="@string/course_year"
        android:minHeight="58dp"
        android:padding="10dp"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/edit_courseDesignation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/box_outline"
        android:drawableStart="@drawable/ic_action_course"
        android:drawablePadding="2dp"
        android:gravity="center"
        android:hint="@string/course_designation"
        android:minHeight="58dp"
        android:padding="10dp"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/add_course" />

    <Button
        android:id="@+id/btn_go_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/go_back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

</LinearLayout>
